Index page buttonsl

--- a/linkbook/core/templates/core/index.html
+++ b/linkbook/core/templates/core/index.html
@@ -73,6 +73,47 @@
 
 
 <div class="container" style="padding: 0px;" >
+
+    {% if request.user.is_authenticated %}
+        <div class="row" style="padding: 1px; margin: 0px;">
+        <br>
+            <div class="col s12 m4 l4 xl4 topButton ">
+                <div class="row" style="margin: 0px; padding: 1px">
+                    <a href="#modal2" class="btn blue" style="height: 100%; vertical-align: middle">     <i class="material-icons large" style="color: white; vertical-align: middle">queue</i> Create New Book
+
+                    </a>
+                </div>
+            </div>
+            <div class="col s12 m4 l4 xl4 topButton" >
+                <div class="row" style="margin: 0px; padding: 1px">
+                    <a href="#modal3" class="btn blue" style="height: 100%; vertical-align: middle">    <i class="material-icons large" style="color: white; vertical-align: middle">note_add</i> Create New Link
+
+
+                    </a>
+
+                </div>
+            </div>
+            <div class="col s12 m4 l4 xl4 topButton">
+                <div class="row" style="margin: 0px; padding: 1px">
+                    <a href="/recommendor" class="btn blue " style="height: 100%; vertical-align: middle">       <i class="material-icons large" style="color: white; vertical-align: middle">group</i> Find People
+
+
+                    </a>
+                </div>
+            </div>
+        </div>
+        <br>
+    {% else  %}
+        <div class="row blue-grey" style="width:100%; padding: 0px; margin: 0px">
+        <!--
+        <h3 class="center center-align "><span class="blue-grey white-text" style="padding: 3px; border-radius: 5%; font-family: Dosis;">{{user.first_name}}'s Links</span></h3> -->
+
+        <h3 class="center center-align white-text" style="font-family: Dosis; width: 100%; padding: 1px; margin-bottom: 0px">Popular on LinkBook</h3>
+
+    </div>
+    {% endif %}
+
+
     {% for ITEM in all_links %}
     <div class="row" style="padding: 0px; margin: 0px">
         <div class="col s12 m1 l3 xl3"></div>
