--- a/linkbook/core/templates/core/recommendor.html
+++ b/linkbook/core/templates/core/recommendor.html
@@ -37,7 +37,7 @@
                         </li>
                     {% endfor %}
                 <li class="collection-item center center-align">
-                    These recommendations are based on the type of similar tags and links.
+                    These recommendations are based on the type of similar tags and your profile network.
                 </li>
                 </ul>
             </div>
