--- a/linkbook/links/templates/links/view_upvoted_links.html
+++ b/linkbook/links/templates/links/view_upvoted_links.html
@@ -84,7 +84,7 @@
                                 <div class="row">
                                     <div class="col s12 m12 l4 xl4"></div>
                                     <div class="col s12 m12 l4 xl4 flow-text center">
-                                        You don't have any links till yet.
+                                        You haven't upvoted any links till yet.
                                     </div>
                                     <div class="col s12 m12 l4 xl4"></div>
                                 </div>
