--- a/linkbook/core/templates/core/index.html
+++ b/linkbook/core/templates/core/index.html
@@ -112,9 +112,11 @@
 
     </div>
     {% endif %}
+</div>
 
 
     {% for ITEM in all_links %}
+        <div class="container" style="padding: 0px">
     <div class="row" style="padding: 0px; margin: 0px">
         <div class="col s12 m1 l3 xl3"></div>
         <div class="col s12 m10 l6 xl6 link_card" id="{{ ITEM.link.id }}">
