--- a/linkbook/templates/base.html
+++ b/linkbook/templates/base.html
@@ -74,7 +74,7 @@ body{
             <li class="active left"><a href="/" style="font-family: Dosis; font-weight:600; font-size: 18px;">Home</a></li>
             <li><a class="left" href="/trending" style="font-family: Dosis; font-weight:600; font-size: 18px;">Trending</a></li>
             <li><a class="left" href="/project" style="font-family: Dosis; font-weight:600; font-size: 18px;">Project</a></li>
-            <li><a class="left" href="#" style="font-family: Dosis; font-weight:600; font-size: 18px;">About Us</a></li>
+            <li><a class="left" href="/aboutus" style="font-family: Dosis; font-weight:600; font-size: 18px;">About Us</a></li>
         </ul>
         
         <ul class="hide-on-med-and-down right">
@@ -123,7 +123,7 @@ body{
 
                 <li><a href="/logout/?next={{ request.path }}" style="font-family: Dosis; font-weight:600; font-size: 18px;">Logout</a></li>
             {% endif %}
-            <li><a href="#" style="font-family: Dosis; font-weight:600; font-size: 18px;">About Us </a></li>
+            <li><a href="/aboutus" style="font-family: Dosis; font-weight:600; font-size: 18px;">About Us </a></li>
             <li><a href="/project" style="font-family: Dosis; font-weight:600; font-size: 18px;">Project</a></li>
             <li><a href="/trending" style="font-family: Dosis; font-weight:600; font-size: 18px;">Trending</a></li>
         </ul>
