--- a/linkbook/core/templates/core/aboutus.html
+++ b/linkbook/core/templates/core/aboutus.html
@@ -64,7 +64,7 @@
         <div class="card">
             <div class="card-image">
               <img src="/static/nikhil.jpg">
-                <span class="card-title" >Lord Nikhil Kumar</span>
+                <span class="card-title" >Nikhil Kumar</span>
             </div>
             <div class="card-content center">
                <a href="https://github.com/nikhilkumarsingh/"><button class="social-button" style="color: #000000"><span class="fa fa-github"></span></button></a>
