--- a/linkbook/core/templates/core/project.html
+++ b/linkbook/core/templates/core/project.html
@@ -63,10 +63,10 @@
 
             <p class="flow-text" >
                 <h3 class="center center-align">LinkBook</h3>
-                <br><br>
+                <br>
 
             <div class="flow-text">
-                The social media for links!<br><br>
+                <strong>The social media for links!</strong><br>
 
                 Linkbook is a social link manager which lets you manage your links as well as lets you share them with your followers.
 </div>
@@ -74,17 +74,17 @@
                 </div>
                 <br>
             <div class="flow-text">
-                Other features of LinkBook:<br>
-                1. Whom to follow?<br>
+                Other cool features of LinkBook:<br>
+                <strong>Whom to follow?</strong><br>
                 You can always see <a href="/recommendor">recommendor</a> page to get a list of users whom you can follow.<br>
 
-                2. What's trending?<br>
+                <strong>What's trending?</strong><br>
                 You can get an animated cloud of most popular tags on LinkBook at our <a href="/trending">trending</a> page.<br>
 
-                3. Where are the link I upvoted?<br>
+                <strong>Where are the link I upvoted?</strong><br>
                 You can always find the links you  upvoted <a href="/{{request.user}}/?show=upvoted">here</a> for future reference.<br>
 
-                4. How to manage my links?<br>
+                <strong>How to manage my links?</strong><br>
                 You can manage all your links <a href="/{{request.user}}/?show=links">here</a>. You can import or remove any link to/from any book.
                </div>
                 </p>
