tabs and navbaar improvements

--- a/linkbook/authentication/templates/authentication/login.html
+++ b/linkbook/authentication/templates/authentication/login.html
@@ -84,6 +84,8 @@
 
     <script>
         $('.modal').modal();
+        $('#nav-login').addClass('active');
+        $('#mobile-nav-login').addClass('active');
 
     </script>
 
