--- a/linkbook/authentication/templates/authentication/signup.html
+++ b/linkbook/authentication/templates/authentication/signup.html
@@ -73,6 +73,8 @@
 
     <script>
         $('.modal').modal();
+        $('#nav-signup').addClass('active');
+        $('#mobile-nav-signup').addClass('active');
     </script>
 
 {% endblock body %}
