--- a/linkbook/core/templates/core/aboutus.html
+++ b/linkbook/core/templates/core/aboutus.html
@@ -61,7 +61,7 @@
 
 <div class="namecard">
     <div class="col s12 m4 l4 xl4">
-        <div class="card">
+        <div class="card hoverable">
             <div class="card-image">
               <img src="/static/nikhil.jpg">
                 <span class="card-title" >Nikhil Kumar</span>
@@ -77,7 +77,7 @@
 
 <div class="namecard">
     <div class="col s12 m4 l4 xl4">
-        <div class="card">
+        <div class="card hoverable">
             <div class="card-image">
               <img src="/static/himanshu.jpg">
                 <span class="card-title">Himanshu Gupta</span>
@@ -93,7 +93,7 @@
 
 <div class="namecard">
     <div class="col s12 m4 l4 xl4">
-        <div class="card">
+        <div class="card hoverable">
             <div class="card-image">
               <img src="/static/sanchit.jpg">
                 <span class="card-title">Sanchit Agarwal</span>
@@ -108,4 +108,12 @@
 </div>
 
 <div class="thanks">(Special thanks to <a href = "https://www.facebook.com/devashishtri">Devashish Trivedi</a> for the title logo/background)</div>
+
+    <script>
+        $('.modal').modal();
+        $('#nav-aboutus').addClass('active');
+        $('#mobile-nav-aboutus').addClass('active');
+
+    </script>
+
 {% endblock body %}
