--- a/linkbook/core/templates/core/index.html
+++ b/linkbook/core/templates/core/index.html
@@ -562,6 +562,9 @@
         $(function(){
 
 
+            $('#nav-home').addClass('active');
+            $('#mobile-nav-home').addClass('active');
+
             $('.dropdown-button').dropdown({
               inDuration: 300,
               outDuration: 225,
