--- a/linkbook/core/templates/core/project.html
+++ b/linkbook/core/templates/core/project.html
@@ -119,6 +119,10 @@
             $('.modal').modal();
 
 
+            $('#nav-project').addClass('active');
+            $('#mobile-nav-project').addClass('active');
+
+
         }));
 
     </script>
