--- a/linkbook/core/templates/core/trending.html
+++ b/linkbook/core/templates/core/trending.html
@@ -22,6 +22,8 @@
     <script>
 
         $('.modal').modal();
+        $('#nav-trending').addClass('active');
+        $('#mobile-nav-trending').addClass('active');
 
     </script>
 
