--- a/linkbook/templates/base.html
+++ b/linkbook/templates/base.html
@@ -1,7 +1,10 @@
 {% load staticfiles i18n %}
 {% load notifications_tags %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+      xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:og="http://ogp.me/ns#"
+      xmlns:fb="https://www.facebook.com/2008/fbml">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
