--- a/linkbook/core/templates/core/trending.html
+++ b/linkbook/core/templates/core/trending.html
@@ -6,12 +6,22 @@
 
 {% block body %}
 	<style>
-		#wordcloudTrending{
-			width: 100%;
-    		height: 100%;
-    		margin: 0px 0px 0px 0px;
-    		padding: 0px 0px 0px 0px;
-		}
+    @media screen and (max-width: 601px){
+    #wordcloudTrending{
+        width: 100%;
+        height: 100%;
+        margin-top: 10%;
+        margin-left: -5%;
+    }
+}
+	@media screen and (min-width: 601px){
+    #wordcloudTrending{
+        width: 60%;
+        height:60%;
+        margin-top: 10%;
+        margin-left: 20%;
+    }
+    }
 	</style>
 
 	<div class="center" id="wordcloudTrending">
