--- a/linkbook/templates/taggit_templatetags2/tagcanvas_include_js.html
+++ b/linkbook/templates/taggit_templatetags2/tagcanvas_include_js.html
@@ -2,16 +2,19 @@
 window.onload = function() {
     try {
       TagCanvas.Start('{{ element_id }}_canvas', '{{ element_id }}_tags',{
-        textColour: '#0037ff', 
-        textFont: "Palatino", 
+        textColour: '#26a69a', 
+        textFont: 'Dosis', 
         outlineColour: 'transparent',
-        shadow: '#3588cc',
+        shadow: '#1d7d74',
         shadowOffset: [1,1],
-        textHeight: 50,
+        textHeight: 30,
         reverse: true,
         depth: 0.8,
-        maxSpeed: 0.035,
+        maxSpeed: 0.033,
         weight: true,
+        zoom : 0.95,
+        zoomMax : 1.10,
+        zoomMin : 0.80
       });
     
     } catch(e) {
