--- a/linkbook/core/templates/core/index.html
+++ b/linkbook/core/templates/core/index.html
@@ -506,6 +506,7 @@
         </div>
 
 {% endfor %}
+    <script src="/static/library/js/index.js"></script>
 <script>
         var commentsOperationsVariable = -1;
         var globalCommentsObject = {};
@@ -575,11 +576,6 @@
               alignment: 'right', // Displays dropdown with edge aligned to the left of button
               stopPropagation: false // Stops event propagation
             });
-
-
-
-
-
             // load comments initially
             {% for item in all_links %}
                 LoadComments({{ item.link.id }});
@@ -595,7 +591,7 @@
             link_id = $(this).attr("link_id");
             $.get('/link/' + link_id + '/vote/', {type: 'U'}, function(data){
                        $('#downvote_button' + link_id).removeClass('lighten-5');
- 
+
                         if(data['upvote_button'] == ''){
                             $('#upvote_button' + link_id).removeClass('lighten-5');
                             $('#upvote_button' + link_id).html("<i class='material-icons' style='color: white; background-color: transparent'>thumb_up</i> <span style='vertical-align: top;'>"
@@ -617,7 +613,7 @@
             link_id = $(this).attr("link_id");
             $.get('/link/' + link_id + '/vote/', {type: 'D'}, function(data){
                        $('#upvote_button' + link_id).removeClass('lighten-5');
-                       
+
                         if(data['downvote_button'] == ''){
                             $('#downvote_button' + link_id).removeClass('lighten-5');
                             $('#downvote_button' + link_id).html("<i class='material-icons' style='color: white; background-color: transparent'>thumb_down</i> <span style='vertical-align: top;'>"+
@@ -646,7 +642,7 @@
                 }
                 else{
                     $('#comments' + id).css({'display' : 'none'});
-                    $('#comments_tab' + id).html("<i class='material-icons' style='color: white; cbackground-color: transparent' >comment</i><span style='vertical-align: top;'> " + 
+                    $('#comments_tab' + id).html("<i class='material-icons' style='color: white; cbackground-color: transparent' >comment</i><span style='vertical-align: top;'> " +
                         globalCommentsObject[id].length + "</span>");
                 }
                 comments_open[id] = 1 - comments_open[id];
@@ -659,7 +655,7 @@
                     $("#modal1").modal('open');
                     return;
                 {% endif %}
-                
+
                 var id = this.id;
                 var formId = '#commentForm' + id;
 
@@ -702,141 +698,8 @@
         });
 
 
-            $('.DESCR').each(function () {
-
-
-                var max_length = 150;
-                if($(this).html().length > max_length)
-                {
-
-                    console.log("Read_more");
-                    var short_content = $(this).html().substr(0, max_length);
-                    $(this).html(short_content);
-                    console.log($(this).next().children()[0]);
-                    $(this).next().children().css({'display' : 'inline-block'});
-                }
-
-            });
-
-
-
-            /* Events for edit and delete Comments */
-            $('.editCommentButton').click(function () {
-
-                console.log("Edit comment called");
-                var id = this.id;
-                id = id.split('');
-                console.log(id);
-                 id.splice(0, 17);
-                id = id.join('');
-                console.log(id);
-                var textAreaEditComment = $('#modalEditCommentTextarea'  +id);
-                var text = textAreaEditComment.val();
-                if(!$.trim(text)){
-                    alert("Can't add empty comments!");
-                    commentsSubmitButton.removeClass('disabled');
-                    return;
-                }
-                // Removing excess white spaces from text area.
-                text.replace(/\s+/g, " ").replace(/^\s|\s$/g, "");
-                // ID of comment to be edited
-                var commentIndex = commentsOperationsVariable;
-                $.ajax({
-                    url : '/comment/'+commentIndex+'/edit/',
-                    type: 'post',
-                    data: {'text':text},
-                    success :function(data, status){
-                        console.log(data);
-                        $('#modalEditComment' + id).modal('close');
-                        LoadComments(id);
-                    }
-                });
-            });
-
-
-            var show_url_button = $('.show_url_button');
-            show_url_button.click(function () {
-                var str = 'link_url' + (this.id);
-                console.log(str);
-                selectText(str);
-            });
-           /*
-           $('.link_card').click(function () {
-                var id = this.id;
-                var url = '/link/' + id;
-                window.open(url);
-            });
-            $('.link_card a').click(function (e) {
-                e.stopPropagation();
-            });
-            $('.link_card button').click(function (e) {
-                e.stopPropagation();
-            });
-            $('.link_card .btn').click(function (e) {
-                e.stopPropagation();
-            });
-            */
-            $('.deleteCommentButton').click(function () {
-
-                var id = this.id;
-                id = id.split('');
-                console.log(id);
-                 id.splice(0, 19);
-                id = id.join('');
-                console.log(id);
-
-                 commentIndex = commentsOperationsVariable;
-                $.ajax({
-                    url : '/comment/'+commentIndex+'/delete/',
-                    type: 'post',
-                    success :function(data, status){
-                        console.log(data);
-                        $('#modalEditComment' + id).modal('close');
-                        LoadComments(id);
-                    }
-                });
-            });
-            $('.modal').modal();
-            var copy = $('.copy');
-            copy.click(function (){
-                console.log("Copied Called");
-                var id = this.id;
-                console.log("id is " + id);
-                var linkUrl = $('#link_url' + id).attr('href');
-                console.log("LinkUrl is");
-                console.log(linkUrl);
-                copyToClipboard(linkUrl);
-            });
         });
 
-        $('img').on('error', function () {
-            $('#card_image_div').css({'display' : 'none'});
-        });
-        function copyToClipboard(element) {
-
-
-            var $temp = $("<input>");
-            $("body").append($temp);
-            $temp.val(element).select();
-            document.execCommand("copy");
-            $temp.remove();
-            Materialize.toast('copied to clipboard', 2000);
-        }
-
-        function selectText(containerid)
-        {
-            if (document.selection) {
-                var range = document.body.createTextRange();
-                range.moveToElementText(document.getElementById(containerid));
-                range.select();
-            } else if (window.getSelection) {
-                 range = document.createRange();
-                range.selectNode(document.getElementById(containerid));
-                window.getSelection().removeAllRanges();
-                window.getSelection().addRange(range);
-            }
-        }
-        // delete link
 
 </script>
 {% endblock body %}
