--- a/linkbook/links/templates/links/link.html
+++ b/linkbook/links/templates/links/link.html
@@ -186,36 +186,6 @@
                     </a>
                 </li>
                 {% endif %}
-                <!-- End of open graph data -->
-                <!-- Sharing Options
-                    <li class="collection-item avatar">
-                      <i class="material-icons circle blue-grey">share</i>
-                        <span class="title blue-grey-text">Share</span>
-                        <p>
-                            <div>
-                                <a href = "https://www.facebook.com/sharer/sharer.php?u={{link.url}}">
-                                    <img height=41px width=41px src="/static/icons/fb.svg" alt="Facebook" />
-                                </a>
-                                <a href = "https://twitter.com/home?status={{link.url}}">
-                                    <img height=41px width=41px src="/static/icons/Twitterbird.png" alt="Twitter" />
-                                </a>
-                                <a href = "https://plus.google.com/share?url={{link.url}}">
-                                    <img height=41px width=41px src="/static/icons/gplus.png" alt="Google+" />
-                                </a>
-                                <a href = "http://www.reddit.com/submit?url={{link.url}}">
-                                    <img height=41px width=41px src="/static/icons/reddit.png" alt="Reddit" />
-                                </a>
-                                <a href = "http://pinterest.com/pin/create/button/?url={{link.url}}&description={{link.description}}">
-                                    <img height=41px width=41px src="/static/icons/pinterest.svg" alt="Pinterest" />
-                                </a>
-                                <a href = "https://www.linkedin.com/shareArticle?mini=true&url={{link.url}}">
-                                    <img height=41px width=41px src="/static/icons/linkedin.svg" alt="LinkedIn" />
-                                </a>
-                            </div>
-                        </p>
-                    </li>
-                    -->
-                <!-- Tags -->
             {%  if links.tag.all|length != 0 %}
                 <li class="collection-item avatar" style="padding: 5px; min-height: 10px">
 
@@ -583,41 +553,6 @@
                 });
             });
 
-
-            var show_url_button = $('#show_url_button');
-            show_url_button.click(function () {
-                selectText('link_url');
-            });
-
-
-            var comments_tab = $('#comments_tab');
-            var comments_open = 0;
-
-
-            comments_tab.click(function () {
-                if(comments_open == 0){
-                    $('#comments').css({'display' : 'block'});
-                    comments_tab.html("Hide Comments");
-                }
-                else{
-                    $('#comments').css({'display' : 'none'});
-                    $('#comments_tab').html("<i class='material-icons' style='color: white; cbackground-color: transparent' >comment</i><span style='vertical-align: top;'> " + 
-                        globalCommentsObject.length + "</span>");
-                }
-                comments_open = 1 - comments_open;
-                LoadComments();
-            });
-
-
-            $('.modal').modal();
-            var copy = $('.copy');
-            copy.click(function (){
-                var linkUrl = $('#link_url');
-                copyToClipboard(linkUrl);
-                Materialize.toast('copied to clipboard', 2000);
-            });
-
-
             var commentsSubmitButton = $('#commentSubmitButton');
             commentsSubmitButton.click(function (){
                 {% if not request.user.is_authenticated %}
@@ -653,94 +588,9 @@
             });
 
 
-            /* Events for edit and delete Comments */
-            $('#editCommentButton').click(function () {
-
-                var textAreaEditComment = $('#modalEditCommentTextarea');
-                var text = textAreaEditComment.val();
-                if(!$.trim(text)){
-                    alert("Can't add empty comments!");
-                    commentsSubmitButton.removeClass('disabled');
-                    return;
-                }
-                
-                // Removing excess white spaces from text area.
-                text.replace(/\s+/g, " ").replace(/^\s|\s$/g, "");
-
-                // ID of comment to be edited
-                var commentIndex = commentsOperationsVariable;
-
-                $.ajax({
-                    url : '/comment/'+commentIndex+'/edit/',
-                    type: 'post',
-                    data: {'text':text},
-                    success :function(data, status){
-                        console.log(data);
-                        $('#modalEditComment').modal('close');
-                        LoadComments();
-                    }
-                });
-            });
-
-
-            $('#deleteCommentButton').click(function () {
-
-                var commentIndex = commentsOperationsVariable;
-                $.ajax({
-                    url : '/comment/'+commentIndex+'/delete/',
-                    type: 'post',
-                    success :function(data, status){
-                        console.log(data);
-                        $('#modalEditComment').modal('close');
-                        LoadComments();
-                    }
-                });
-            });
-
-
-        });
-
-
-        $('img').on('error', function () {
-            $('#card_image_div').css({'display' : 'none'});
-        });
-
-
-        function copyToClipboard(element) {
-        var $temp = $("<input>");
-        $("body").append($temp);
-        $temp.val($(element).text()).select();
-        document.execCommand("copy");
-        $temp.remove();
-        }
-
-        function selectText(containerid) {
-            if (document.selection) {
-                var range = document.body.createTextRange();
-                range.moveToElementText(document.getElementById(containerid));
-                range.select();
-            } else if (window.getSelection) {
-                 range = document.createRange();
-                range.selectNode(document.getElementById(containerid));
-                window.getSelection().removeAllRanges();
-                window.getSelection().addRange(range);
-            }
-        }
-
-        // delete link
-        $('#deleteCompletely').click(function(){
-            $.ajax({
-                url: '/link/{{link.id}}/delete/',
-                type: 'post',
-                success: function(data, status){
-                    console.log(data);
-                    window.location = "/{{request.user.username}}/";
-                }
-
-            });
-
         });
 
     </script>
+    <script src="/static/library/js/link.js"></script>
 {% endblock %}
 
