--- a/linkbook/templates/base.html
+++ b/linkbook/templates/base.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="LinkBook | A social media for links!"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="http://linkbook.pythonanywhere.com/"/>
-    <meta property="og:image" content="http://linkbook.pythonanywhere.com/static/favicon.ico"/>
+    <meta property="og:image" content="http://linkbook.pythonanywhere.com/static/og_icon.png"/>
     <meta property="og:site_name" content="LinkBook"/>
     <meta property="og:description" content="LinkBook lets you share and manage your links with ease. Create an account to get started!"/>
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
